2D渲染器今天开始写啦

--- a/Sinple2D/Sinple2D.vcxproj.filters
+++ b/Sinple2D/Sinple2D.vcxproj.filters
@@ -27,7 +27,13 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Sinple2D.h">
+    <ClInclude Include="RenderWindow.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicsContext.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +41,13 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Sinple2D.cpp">
+    <ClCompile Include="RenderWindow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicsContext.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
