--- a/Sinple2D/Sinple2D.vcxproj
+++ b/Sinple2D/Sinple2D.vcxproj
@@ -155,6 +155,8 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="GraphicsContext.h" />
+    <ClInclude Include="Math.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="RenderWindow.h" />
     <ClInclude Include="stdafx.h" />
@@ -163,6 +165,8 @@
   <ItemGroup>
     <ClCompile Include="GraphicsContext.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Math.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -177,6 +181,9 @@
   <ItemGroup>
     <Image Include="Sinple2D.ico" />
     <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
