--- a/Sinple2D/Sinple2D.vcxproj
+++ b/Sinple2D/Sinple2D.vcxproj
@@ -153,6 +153,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Canvas2D.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="GraphicsContext.h" />
     <ClInclude Include="Math.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Canvas2D.cpp" />
     <ClCompile Include="GraphicsContext.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math.cpp" />
